<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewCalls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_erl_calls_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextCalls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewAvgCallTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_erl_avgcalltime_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAvgCallTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewObservationPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_erl_observationperiod_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextObservationPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewErlang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_erlang_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextErlErlang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonErlCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calculate_text" />

</LinearLayout>