<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewBErlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_erlang_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextBErlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewBCircuits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_curcuits_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextBCurcuits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewBProbability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_b_blockingprobability_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextBProbability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonBCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate_text" />
    </LinearLayout>

</ScrollView>