<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewCErlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_erlang_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCErlang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textViewCCallAgents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_c_callagents_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCCallAgents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewCProbabilty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_c_probabilty_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCProbability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonCCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate_text" />

    </LinearLayout>
    

</ScrollView>